@@ -127,5 +127,6 @@ exec "$JAVACMD" $JAVA_OPTS  \
   -Dapp.repo="$REPO" \
   -Dapp.home="$BASEDIR" \
   -Dbasedir="$BASEDIR" \
+  --add-exports java.base/sun.security.pkcs=ALL-UNNAMED \
   @verapdf.wrapper.cli@ \
   "$@"
